# Towards3DVRSketch

./: .gitignore  README.md
3DSketchRetrieval/: Dataset_Loader.py  README.md  args.py  config.py  evaluation.py  train_ngvnn_sbr_triplet.py  train_triplet.py
3DSketchRetrieval/data_prep/: gen_pointcloud.py  render_img.py  run_render_img.py  run_render_mesh.py
3DSketchRetrieval/data_prep/blender/: render_depth.blend  render_meshes_shaded_black_bg.blend
3DSketchRetrieval/dataset/: ImageLoader.py  MultiViewLoader.py  PointCloudLoader.py  TripletSampler.py
3DSketchRetrieval/models/: Model.py  n_gram.py  ngram_sbr_net.py  pointnet2_cls_msg.py
3DSketchRetrieval/tools/: custom_loss.py  evaluation.py  misc.py
SyntheticSketch/: agrregate_network.py  disturb_3d.py
SyntheticSketch/merge_lines/: main.cpp  readEdges.cpp  readEdges.h  writeOBJChains.cpp
merge_lines/: CMakeLists.txt  README.md  input.h  lines.h  mergeLines.cpp  mergeLines.h  resampleRDP.cpp  resampleRDP.h  writeOBJChains.h
